--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -1221,7 +1221,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1abe6c550>"
+       "<matplotlib.lines.Line2D at 0x1a3f55990>"
       ]
      },
      "execution_count": 8,
