--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -81,16 +81,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.  0.5 0.  0.  0.  0. ]\n",
-      " [1.  0.  0.5 0.  0.  0. ]\n",
-      " [0.  0.5 0.  0.5 0.  0. ]\n",
-      " [0.  0.  0.5 0.  0.5 0. ]\n",
-      " [0.  0.  0.  0.5 0.  0.5]\n",
-      " [0.  0.  0.  0.  0.5 0. ]]\n"
+      "[[ 0.0000  0.5000  0.0000  0.0000  0.0000  0.0000]\n",
+      " [ 1.0000  0.0000  0.5000  0.0000  0.0000  0.0000]\n",
+      " [ 0.0000  0.5000  0.0000  0.5000  0.0000  0.0000]\n",
+      " [ 0.0000  0.0000  0.5000  0.0000  0.5000  0.0000]\n",
+      " [ 0.0000  0.0000  0.0000  0.5000  0.0000  0.5000]\n",
+      " [ 0.0000  0.0000  0.0000  0.0000  0.5000  0.0000]]\n"
      ]
     }
    ],
    "source": [
+    "np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
     "print(A.diags().toarray())"
    ]
   },
@@ -112,12 +113,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.         0.33333333 0.         0.         0.         0.        ]\n",
-      " [1.         0.         0.4        0.         0.         0.        ]\n",
-      " [0.         0.66666667 0.         0.42857143 0.         0.        ]\n",
-      " [0.         0.         0.6        0.         0.44444444 0.        ]\n",
-      " [0.         0.         0.         0.57142857 0.         0.45454545]\n",
-      " [0.         0.         0.         0.         0.55555556 0.        ]]\n"
+      "[[ 0.0000  0.3333  0.0000  0.0000  0.0000  0.0000]\n",
+      " [ 1.0000  0.0000  0.4000  0.0000  0.0000  0.0000]\n",
+      " [ 0.0000  0.6667  0.0000  0.4286  0.0000  0.0000]\n",
+      " [ 0.0000  0.0000  0.6000  0.0000  0.4444  0.0000]\n",
+      " [ 0.0000  0.0000  0.0000  0.5714  0.0000  0.4545]\n",
+      " [ 0.0000  0.0000  0.0000  0.0000  0.5556  0.0000]]\n"
      ]
     }
    ],
@@ -206,12 +207,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.          0.          0.          0.        ]\n",
-      " [ 0.25        0.         -0.16666667  0.          0.04166667  0.        ]\n",
-      " [ 0.          0.04166667  0.         -0.0625      0.          0.02083333]\n",
-      " [ 0.          0.          0.02083333  0.         -0.03333333  0.        ]\n",
-      " [ 0.          0.          0.          0.0125      0.         -0.02083333]]\n"
+      "[[ 0.0000  0.0000  0.0000  0.0000  0.0000  0.0000]\n",
+      " [ 0.0000  0.0000  0.0000  0.0000  0.0000  0.0000]\n",
+      " [ 0.2500  0.0000 -0.1667  0.0000  0.0417  0.0000]\n",
+      " [ 0.0000  0.0417  0.0000 -0.0625  0.0000  0.0208]\n",
+      " [ 0.0000  0.0000  0.0208  0.0000 -0.0333  0.0000]\n",
+      " [ 0.0000  0.0000  0.0000  0.0125  0.0000 -0.0208]]\n"
      ]
     }
    ],
@@ -1221,7 +1222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1a3f55990>"
+       "<matplotlib.lines.Line2D at 0x19dd9a050>"
       ]
      },
      "execution_count": 8,
