Formatting matrices again

--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -78,21 +78,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.0000  0.5000  0.0000  0.0000  0.0000  0.0000]\n",
-      " [ 1.0000  0.0000  0.5000  0.0000  0.0000  0.0000]\n",
-      " [ 0.0000  0.5000  0.0000  0.5000  0.0000  0.0000]\n",
-      " [ 0.0000  0.0000  0.5000  0.0000  0.5000  0.0000]\n",
-      " [ 0.0000  0.0000  0.0000  0.5000  0.0000  0.5000]\n",
-      " [ 0.0000  0.0000  0.0000  0.0000  0.5000  0.0000]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.0000,  0.5000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 1.0000,  0.0000,  0.5000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.5000,  0.0000,  0.5000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.5000,  0.0000,  0.5000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.5000,  0.0000,  0.5000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.5000,  0.0000]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
-    "print(A.diags().toarray())"
+    "A.diags().toarray()"
    ]
   },
   {
@@ -110,21 +113,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.0000  0.3333  0.0000  0.0000  0.0000  0.0000]\n",
-      " [ 1.0000  0.0000  0.4000  0.0000  0.0000  0.0000]\n",
-      " [ 0.0000  0.6667  0.0000  0.4286  0.0000  0.0000]\n",
-      " [ 0.0000  0.0000  0.6000  0.0000  0.4444  0.0000]\n",
-      " [ 0.0000  0.0000  0.0000  0.5714  0.0000  0.4545]\n",
-      " [ 0.0000  0.0000  0.0000  0.0000  0.5556  0.0000]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.0000,  0.3333,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 1.0000,  0.0000,  0.4000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.6667,  0.0000,  0.4286,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.6000,  0.0000,  0.4444,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.5714,  0.0000,  0.4545],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.5556,  0.0000]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "A = pmat(a, 1, 0, 0, 6, 6)\n",
-    "print(A.diags().toarray())"
+    "A.diags().toarray()"
    ]
   },
   {
@@ -204,21 +210,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.0000  0.0000  0.0000  0.0000  0.0000  0.0000]\n",
-      " [ 0.0000  0.0000  0.0000  0.0000  0.0000  0.0000]\n",
-      " [ 0.2500  0.0000 -0.1667  0.0000  0.0417  0.0000]\n",
-      " [ 0.0000  0.0417  0.0000 -0.0625  0.0000  0.0208]\n",
-      " [ 0.0000  0.0000  0.0208  0.0000 -0.0333  0.0000]\n",
-      " [ 0.0000  0.0000  0.0000  0.0125  0.0000 -0.0208]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.2500,  0.0000, -0.1667,  0.0000,  0.0417,  0.0000],\n",
+       "       [ 0.0000,  0.0417,  0.0000, -0.0625,  0.0000,  0.0208],\n",
+       "       [ 0.0000,  0.0000,  0.0208,  0.0000, -0.0333,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0125,  0.0000, -0.0208]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "B2 = pmat(b, 2, -half, -half, 6, 6, cn)\n",
-    "print(B2.diags().toarray())"
+    "B2.diags().toarray()"
    ]
   },
   {
@@ -240,7 +249,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "73b0c3fc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1222,7 +1233,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x19dd9a050>"
+       "<matplotlib.lines.Line2D at 0x1a6bde200>"
       ]
      },
      "execution_count": 8,
