--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -73,45 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "1c1d5b5f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot handle this data type: (1, 1), <i8",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/opt/anaconda3/envs/shenfun/lib/python3.10/site-packages/PIL/Image.py:2835\u001b[0m, in \u001b[0;36mfromarray\u001b[0;34m(obj, mode)\u001b[0m\n\u001b[1;32m   2834\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 2835\u001b[0m     mode, rawmode \u001b[38;5;241m=\u001b[39m \u001b[43m_fromarray_typemap\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtypekey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m   2836\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[0;31mKeyError\u001b[0m: ((1, 1), '<i8')",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mImage\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mPIL\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdiags\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/shenfun/lib/python3.10/site-packages/PIL/Image.py:2837\u001b[0m, in \u001b[0;36mfromarray\u001b[0;34m(obj, mode)\u001b[0m\n\u001b[1;32m   2835\u001b[0m         mode, rawmode \u001b[38;5;241m=\u001b[39m _fromarray_typemap[typekey]\n\u001b[1;32m   2836\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m-> 2837\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot handle this data type: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m typekey) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m   2838\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   2839\u001b[0m     rawmode \u001b[38;5;241m=\u001b[39m mode\n",
-      "\u001b[0;31mTypeError\u001b[0m: Cannot handle this data type: (1, 1), <i8"
-     ]
-    }
-   ],
-   "source": [
-    "from IPython.display import display\n",
-    "import PIL.Image\n",
-    "#np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
-    "PIL.Image.fromarray(A.diags().toarray().astype(int))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f4ff2fd",
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAAAAADFp7CUAAAAD0lEQVR4nGNggABGBkIAAABMAAL7eIz1AAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<IPython.core.display.Image object>"
+       "array([[ 0.0000,  0.5000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 1.0000,  0.0000,  0.5000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.5000,  0.0000,  0.5000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.5000,  0.0000,  0.5000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.5000,  0.0000,  0.5000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.5000,  0.0000]])"
       ]
      },
      "metadata": {},
@@ -119,16 +93,9 @@
     }
    ],
    "source": [
-    "import PIL.Image\n",
-    "import io\n",
-    "import IPython.display\n",
-    "import numpy as np\n",
-    "def showarray(a, fmt='png'):\n",
-    "    a = np.uint8(a)\n",
-    "    f = io.BytesIO()\n",
-    "    PIL.Image.fromarray(a).save(f, fmt)\n",
-    "    IPython.display.display(IPython.display.Image(data=f.getvalue()))\n",
-    "showarray(A.diags().toarray())"
+    "from IPython.display import display\n",
+    "np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
+    "display(A.diags().toarray())"
    ]
   },
   {
@@ -148,28 +115,21 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.33333333, 0.        , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [1.        , 0.        , 0.4       , 0.        , 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.66666667, 0.        , 0.42857143, 0.        ,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.6       , 0.        , 0.44444444,\n",
-       "        0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.57142857, 0.        ,\n",
-       "        0.45454545],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.55555556,\n",
-       "        0.        ]])"
+       "array([[ 0.0000,  0.3333,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 1.0000,  0.0000,  0.4000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.6667,  0.0000,  0.4286,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.6000,  0.0000,  0.4444,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.5714,  0.0000,  0.4545],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.5556,  0.0000]])"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "A = pmat(a, 1, 0, 0, 6, 6)\n",
-    "A.diags().toarray()"
+    "display(A.diags().toarray())"
    ]
   },
   {
@@ -251,28 +211,21 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ],\n",
-       "       [ 0.25      ,  0.        , -0.16666667,  0.        ,  0.04166667,\n",
-       "         0.        ],\n",
-       "       [ 0.        ,  0.04166667,  0.        , -0.0625    ,  0.        ,\n",
-       "         0.02083333],\n",
-       "       [ 0.        ,  0.        ,  0.02083333,  0.        , -0.03333333,\n",
-       "         0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        ,  0.0125    ,  0.        ,\n",
-       "        -0.02083333]])"
+       "array([[ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.2500,  0.0000, -0.1667,  0.0000,  0.0417,  0.0000],\n",
+       "       [ 0.0000,  0.0417,  0.0000, -0.0625,  0.0000,  0.0208],\n",
+       "       [ 0.0000,  0.0000,  0.0208,  0.0000, -0.0333,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0125,  0.0000, -0.0208]])"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "B2 = pmat(b, 2, -half, -half, 6, 6, cn)\n",
-    "B2.diags().toarray()"
+    "display(B2.diags().toarray())"
    ]
   },
   {
@@ -1278,7 +1231,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1a0a75f90>"
+       "<matplotlib.lines.Line2D at 0x19e0f8f70>"
       ]
      },
      "execution_count": 8,
