Adding ipympl dependency

--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "%matplotlib inline\n",
     "np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
-    "A.diags().toarray()"
+    "A.diags().toarray() # Note the array does not render on github"
    ]
   },
   {
@@ -231,6 +231,71 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34b60fbe",
+   "metadata": {},
+   "source": [
+    "Another recursion is\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    x^q \\partial^k \\boldsymbol{P} = (\\underline{A}^q)^T \\partial^k \\boldsymbol{P}, \\label{eq:xdkP}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $\\underline{A}^{(k,\\alpha,\\beta)} = (\\underline{a}^{(k,\\alpha,\\beta)}_{mn})_{m,n=0}^{\\infty}$  and \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\underline{a}^{(k,\\alpha,\\beta)}_{m+k,n+k} = (\\psi^{(k,\\alpha,\\beta)}_{m+k})^{-1} a_{mn}^{(\\alpha+k,\\beta+k)} \\psi^{(k,\\alpha,\\beta)}_{n+k}, \\quad \\forall \\, m,n \\ge 0. \\label{eq:amn}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\psi_{n}^{(k,\\alpha, \\beta)} = \\frac{(n+\\alpha+\\beta+1)_k}{2^{k}},\n",
+    "    \\label{eq:psin}\n",
+    "\\end{equation}\n",
+    "\n",
+    "using the Pochhammer symbol $(\\alpha)_k=\\Gamma(\\alpha+k)/\\Gamma(\\alpha)$.\n",
+    "\n",
+    "$\\underline{A}^q$ is simply the $q$'th matrix power. To get this matrix in shenfun do (for Chebyshev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f056d8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.1667,  0.0000,  0.8333,  0.0000],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.2500,  0.0000,  0.7500],\n",
+       "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.3000,  0.0000]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k, q = 2, 1\n",
+    "A = a_mat(a_, k, q, -half, -half, 6, 6, cn)\n",
+    "A.diags().toarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01559819",
+   "metadata": {},
+   "source": [
+    "Note that the first two rown and columns are zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d65102c",
    "metadata": {},
    "source": [
@@ -241,12 +306,12 @@
     "    (\\partial^{k-l} u, x^q v)_{\\omega} = L^{(k,q,l)} K^T \\boldsymbol{\\hat{u}}, \\label{eq:varmatrix1}\n",
     "\\end{equation}\n",
     "\n",
-    "where $K$ is a stencil matrix. The matrix $L^{(k,q,l)}$ can be computed explicitly for any orthogonal basis. For Chebyshev we get"
+    "where $K$ is a stencil matrix and $\\boldsymbol{\\hat{u}}$ is the vector of unknown expansion coefficients for the solution. The matrix $L^{(k,q,l)}$ can be computed explicitly for any orthogonal basis. For Chebyshev we get"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "73b0c3fc",
    "metadata": {
     "scrolled": true
@@ -255,10 +320,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1ab517ca0>"
+       "<matplotlib.lines.Line2D at 0x1a6051a80>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
