--- a/binder/Derivations.ipynb
+++ b/binder/Derivations.ipynb
@@ -172,6 +172,69 @@
     "gam = gamma(2, -half, -half, cn, un)\n",
     "gam"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b480d3f2",
+   "metadata": {},
+   "source": [
+    "# Eq. (2.24)\n",
+    "\n",
+    "We state that\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    h_n^{(k)}\\underline{a}^{(k,q)}_{nm} = h_m^{(k)} \\underline{a}_{mn}^{(k,q)},\n",
+    "\\end{equation}\n",
+    "\n",
+    "This can be easily shown using shenfun."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a8f2a955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shenfun.jacobi.recursions import a_, n\n",
+    "k, q = 1, 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a30a78",
+   "metadata": {},
+   "source": [
+    "The matrix $\\underline{A}$ is tridiagonal and as such $\\underline{A}^q$ has bandwidth $1+2q$. It will as such be sufficient to look at the index $m$ being one of $(n-q, n-q+1, \\ldots , n+q-1, n+q)$. Check that all components of $h_n^{(k)}\\underline{a}^{(k,q)}_{nm} - h_m^{(k)} \\underline{a}_{mn}^{(k,q)}$ are identically zero. Since this takes a bit of time (Sympy.simplify is pretty slow), we can use $\\alpha=\\beta$ to speed up. But the results hold also for Jacobi polynomials in general."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d79d3de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m = n-3, dh = 0\n",
+      "m = n-2, dh = 0\n",
+      "m = n-1, dh = 0\n",
+      "m = n+0, dh = 0\n",
+      "m = n+1, dh = 0\n",
+      "m = n+2, dh = 0\n",
+      "m = n+3, dh = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "beta = alfa\n",
+    "for i in range(-q, q+1):\n",
+    "    m = n+i\n",
+    "    dh = h(alfa, beta, n, k)*a_(k, q, alfa, beta, n, m) - h(alfa, beta, m, k)*a_(k, q, alfa, beta, m, n)\n",
+    "    print(\"m = n{0:+}, dh =\".format(i), sp.simplify(dh))"
+   ]
   }
  ],
  "metadata": {
