Removing one notebook

--- a/binder/Derivations.ipynb
+++ b/binder/Derivations.ipynb
@@ -2,6 +2,104 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "de1dedb3",
+   "metadata": {},
+   "source": [
+    "# Numerical evidence of Eq. (2.25)\n",
+    "\n",
+    "The Jacobi polynomials satisfy the recursion relation\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    %(1-x^2) \\partial^k \\boldsymbol{P} &= H_{[k]} B H_{[k-1]}^{+} \\partial^{k-1} \\boldsymbol{P}, \\label{eq:recurB0}\\\\\n",
+    "    (1-x^2)^k \\partial^k \\boldsymbol{P} = (C^{(k)})^T  \\boldsymbol{P}, \\label{eq:recurB1}\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $(C^{(k)})^T = H^{(k)} B^k H^{-1}$ and $H^{(k)} = \\text{diags}(h^{(k,\\alpha,\\beta)}_0, h^{(k,\\alpha,\\beta)}_1, \\ldots)$, $H=H^{(0)}$, and $h^{(k,\\alpha,\\beta)}_n$ is given as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\left( \\partial^k P^{(\\alpha, \\beta)}_{n},  \\partial^k P^{(\\alpha, \\beta)}_{n}\\right)_{\\omega^{(\\alpha+k,\\beta+k)}} = h^{(k,\\alpha, \\beta)}_{n}, \\quad \\text{for} \\quad n\\ge 0.\n",
+    "    \\label{eq:orthoderP}\n",
+    "\\end{equation}\n",
+    "\n",
+    "On index form we have\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    (1-x^2)^k \\partial^k {P}^{(\\alpha,\\beta)}_n = \\sum_{m=n-k}^{n+k}\\frac{h^{(k,\\alpha, \\beta)}_{n}}{h^{(0,\\alpha, \\beta)}_{m}} b^{(k)}_{nm}{P}_{m}^{(\\alpha,\\beta)}, \\label{eq:recurB2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "We can shown that this relations holds for some random choices of parameters.\n",
+    "\n",
+    "# Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "086b88fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "from shenfun.jacobi.recursions import alfa, beta, qn, dqn, n, cn, un, x, h, b, matpow, half\n",
+    "\n",
+    "def lhs(n, k, alfa, beta, gn=1):\n",
+    "    \"\"\"Left hand side of (1)\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    n : int\n",
+    "        Index\n",
+    "    k : int\n",
+    "        parameter\n",
+    "    alfa, beta : numbers\n",
+    "        Jacobi parameters\n",
+    "    gn : scaling function\n",
+    "    \"\"\"\n",
+    "    return (1-x**2)**k*dqn(alfa, beta, n, k, gn)\n",
+    "\n",
+    "def rhs(n, k, alfa, beta, gn=1):\n",
+    "    \"\"\"Right hand side of (1)\n",
+    "    \n",
+    "    Matrix vector product for given row n.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    n : int\n",
+    "        Index\n",
+    "    k : int\n",
+    "        parameter\n",
+    "    alfa, beta : numbers\n",
+    "        Jacobi parameters\n",
+    "    gn : scaling function\n",
+    "    \"\"\"\n",
+    "    s = 0\n",
+    "    for j in range(-k, k+1):\n",
+    "        m = n+j\n",
+    "        s += h(alfa, beta, n, k, gn)/h(alfa, beta, m, 0, gn)*matpow(b, k, alfa, beta, n, m, gn)*qn(alfa, beta, m, gn)\n",
+    "    return s\n",
+    "\n",
+    "# Sympy is not smart enough to simplify lhs and rhs to the same expression. Hence\n",
+    "# we need to show numerically that the expressions are zero for some random x and n.\n",
+    "\n",
+    "def assert_equal(n, k, alf, bet, x_=0.2, gn=1):\n",
+    "    f = abs(lhs(n, k, alf, bet, gn) - rhs(n, k, alf, bet, gn)).subs(x, x_)\n",
+    "    assert f < 1e-12\n",
+    "    \n",
+    "# Legendre polynomials with gn=1\n",
+    "for k in (1, 2, 3, 4):\n",
+    "    for x_ in (0.1, 0.7):\n",
+    "        assert_equal(6, k, 0, 0, x_)\n",
+    "\n",
+    "# Chebyshev polynomials with gn=cn\n",
+    "for k in (1, 2, 3, 4):\n",
+    "    for x_ in (0.1, 0.7):\n",
+    "        assert_equal(6, k, -half, -half, x_, cn)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "93b5a51c",
    "metadata": {},
    "source": [
@@ -28,14 +126,14 @@
     "    \\label{eq:derP}\n",
     "\\end{equation}\n",
     "\n",
-    "which with\n",
+    "where $\\psi^{(k,\\alpha,\\beta)}_{n}$ is given in Eq. (2.8). Using\n",
     "\n",
     "\\begin{equation}\n",
     "    Q^{(\\alpha,\\beta)}_n(x) = g_n^{(\\alpha,\\beta)} P^{(\\alpha,\\beta)}_n(x),\n",
     "    \\label{eq:Qspec}\n",
     "\\end{equation}\n",
     "\n",
-    "becomes\n",
+    "Eq. \\eqref{eq:derP} becomes\n",
     "\n",
     "\\begin{equation}\n",
     "    \\partial^k Q^{(\\alpha, \\beta)}_n = \\frac{g^{(\\alpha,\\beta)}_n }{g^{\\alpha+k,\\beta+k}_{n-k}} \\psi^{(k,\\alpha,\\beta)}_{n} Q^{(\\alpha+k,\\beta+k)}_{n-k},\n",
@@ -102,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6052aa6d",
    "metadata": {},
    "outputs": [],
@@ -150,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b81d52a",
    "metadata": {},
    "outputs": [
@@ -163,7 +261,7 @@
        "1/(n + 2)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b480d3f2",
+   "id": "60e66ff0",
    "metadata": {},
    "source": [
     "# Eq. (2.24)\n",
@@ -183,7 +281,7 @@
     "We state that\n",
     "\n",
     "\\begin{equation}\n",
-    "    h_n^{(k)}\\underline{a}^{(k,q)}_{nm} = h_m^{(k)} \\underline{a}_{mn}^{(k,q)},\n",
+    "    h_n^{(k)}\\underline{a}^{(k,q)}_{nm} = h_m^{(k)} \\underline{a}_{mn}^{(k,q)}.\n",
     "\\end{equation}\n",
     "\n",
     "This can be easily shown using shenfun."
@@ -191,8 +289,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a8f2a955",
+   "execution_count": 4,
+   "id": "f262c619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a30a78",
+   "id": "d2468750",
    "metadata": {},
    "source": [
     "The matrix $\\underline{A}$ is tridiagonal and as such $\\underline{A}^q$ has bandwidth $1+2q$. It will as such be sufficient to look at the index $m$ being one of $(n-q, n-q+1, \\ldots , n+q-1, n+q)$. Check that all components of $h_n^{(k)}\\underline{a}^{(k,q)}_{nm} - h_m^{(k)} \\underline{a}_{mn}^{(k,q)}$ are identically zero. Since this takes a bit of time (Sympy.simplify is pretty slow), we can use $\\alpha=\\beta$ to speed up. But the results hold also for Jacobi polynomials in general."
@@ -210,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0d79d3de",
+   "execution_count": 5,
+   "id": "313234a2",
    "metadata": {},
    "outputs": [
     {
