--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -94,7 +94,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
     "np.set_printoptions(formatter={'float': '{: 0.4f}'.format})\n",
     "A.diags().toarray() # Note the array does not render on github"
    ]
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "f056d8ba",
    "metadata": {},
    "outputs": [
@@ -275,7 +274,7 @@
        "       [ 0.0000,  0.0000,  0.0000,  0.0000,  0.3000,  0.0000]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +290,7 @@
    "id": "01559819",
    "metadata": {},
    "source": [
-    "Note that the first two rown and columns are zero."
+    "Note that the first two rows and columns are zero."
    ]
   },
   {
@@ -320,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1a6051a80>"
+       "<matplotlib.lines.Line2D at 0x19e2c7490>"
       ]
      },
      "execution_count": 9,
