Upgrade to shenfun 4.0.1

--- a/binder/Recursions.ipynb
+++ b/binder/Recursions.ipynb
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x19e2c7490>"
+       "<matplotlib.lines.Line2D at 0x1a63af700>"
       ]
      },
      "execution_count": 9,
