--- a/binder/Section-4.3.2.ipynb
+++ b/binder/Section-4.3.2.ipynb
@@ -247,7 +247,7 @@
    "source": [
     "# Condition numbers\n",
     "\n",
-    "Check the condition number of the coefficient matrix. Use a relatively low number since Jacobi is not implemented very robustly, with gamma functions that overflow. Also, Numpy's routine for computing the condition number makes use of dense matrices, which limits the size. An alternative sparse option here is to compute the eigenvalues with [scipy.sparse.linalg.eigs](https://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.linalg.eigs.html)."
+    "Check the condition number of the coefficient matrix. Use a relatively low number since Jacobi is not implemented very robustly, with gamma functions that overflow. Also, Numpy's routine for computing the condition number makes use of dense matrices, which limits the size. "
    ]
   },
   {
