Move to shenfun v 4.0.2

--- a/binder/Equation (2.25).ipynb
+++ b/binder/Equation (2.25).ipynb
@@ -84,7 +84,7 @@
     "\n",
     "def assert_equal(n, k, alf, bet, x_=1, gn=1):\n",
     "    f = abs(lhs(n, k, alf, bet, gn) - rhs(n, k, alf, bet, gn)).subs(x, x_)\n",
-    "    assert f < 1e-9\n",
+    "    assert f < 1e-8, f\n",
     "    \n",
     "# Legendre polynomials with gn=1\n",
     "for k in (1, 2, 3, 4):\n",
